# vsomeip-service

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/vsomeip/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: vsomeip-server.json
app/src/main/cpp/: CMakeLists.txt  ServiceJNI.cpp
app/src/main/cpp/include/: NativeLog.h
app/src/main/java/com/example/vsomeip/: DemoConfig.kt  DemoServiceListener.kt  MainActivity.kt  VSomeIPService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/vsomeip/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
server/: build.gradle
server/src/main/assets/: vsomeip-server.json
server/src/main/cpp/: CMakeLists.txt  Common.h  ServiceJNI.cpp
server/src/main/cpp/include/: context.h
server/src/main/java/com/example/server/: DefaultConfig.kt  DemoServiceListener.kt  Event.java  ServerConfig.kt  VSomeIPService.kt
